--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "dotenv": "^7.0.0",
     "slackbots": "^1.2.0"
   },
   "devDependencies": {
